<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.techdoctorbd.foodrecipe.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="com.techdoctorbd.foodrecipe.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes"
        tools:layout="@layout/fragment_favorite_recipes" />

    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.techdoctorbd.foodrecipe.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />

</navigation>